refactor: fix sonar issues